// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`load/saveAllServers 1`] = `
"{
  "home": {
    "ctor": "Server",
    "data": {
      "contracts": [],
      "cpuCores": 1,
      "ftpPortOpen": false,
      "hasAdminRights": true,
      "hostname": "home",
      "httpPortOpen": false,
      "ip": "67.4.8.1",
      "isConnectedTo": true,
      "maxRam": 8,
      "messages": [
        "hackers-starting-handbook.lit"
      ],
      "organizationName": "Home PC",
      "programs": [
        "NUKE.exe"
      ],
      "ramUsed": 1.6,
      "runningScripts": [
        {
          "ctor": "RunningScript",
          "data": {
            "args": [],
            "dataMap": {},
            "filename": "script.js",
            "offlineExpGained": 0,
            "offlineMoneyMade": 0,
            "offlineRunningTime": 0.01,
            "onlineExpGained": 0,
            "onlineMoneyMade": 0,
            "onlineRunningTime": 7.210000000000004,
            "ramUsage": 1.6,
            "server": "home",
            "threads": 1,
            "temporary": false
          }
        }
      ],
      "scripts": [
        {
          "ctor": "Script",
          "data": {
            "code": "/** @param {NS} ns */\\\\nexport async function main(ns) {\\\\n  return ns.asleep(1000000);\\\\n}",
            "filename": "script.js",
            "server": "home"
          }
        }
      ],
      "serversOnNetwork": [
        "n00dles"
      ],
      "smtpPortOpen": false,
      "sqlPortOpen": false,
      "sshPortOpen": false,
      "textFiles": [],
      "purchasedByPlayer": true,
      "backdoorInstalled": false,
      "baseDifficulty": 1,
      "hackDifficulty": 1,
      "minDifficulty": 1,
      "moneyAvailable": 0,
      "moneyMax": 0,
      "numOpenPortsRequired": 5,
      "openPortCount": 0,
      "requiredHackingSkill": 1,
      "serverGrowth": 1
    }
  },
  "n00dles": {
    "ctor": "Server",
    "data": {
      "contracts": [],
      "cpuCores": 1,
      "ftpPortOpen": false,
      "hasAdminRights": false,
      "hostname": "n00dles",
      "httpPortOpen": false,
      "ip": "61.6.6.2",
      "isConnectedTo": false,
      "maxRam": 4,
      "messages": [],
      "organizationName": "Noodle Bar",
      "programs": [],
      "ramUsed": 0,
      "runningScripts": [],
      "scripts": [],
      "serversOnNetwork": [
        "home"
      ],
      "smtpPortOpen": false,
      "sqlPortOpen": false,
      "sshPortOpen": false,
      "textFiles": [],
      "purchasedByPlayer": false,
      "backdoorInstalled": false,
      "baseDifficulty": 1,
      "hackDifficulty": 1,
      "minDifficulty": 1,
      "moneyAvailable": 70000,
      "moneyMax": 1750000,
      "numOpenPortsRequired": 0,
      "openPortCount": 0,
      "requiredHackingSkill": 1,
      "serverGrowth": 3000
    }
  }
}"
`;

exports[`load/saveAllServers pruning RunningScripts 1`] = `
"{
  "home": {
    "ctor": "Server",
    "data": {
      "contracts": [],
      "cpuCores": 1,
      "ftpPortOpen": false,
      "hasAdminRights": true,
      "hostname": "home",
      "httpPortOpen": false,
      "ip": "67.4.8.1",
      "isConnectedTo": true,
      "maxRam": 8,
      "messages": [
        "hackers-starting-handbook.lit"
      ],
      "organizationName": "Home PC",
      "programs": [
        "NUKE.exe"
      ],
      "ramUsed": 1.6,
      "runningScripts": [],
      "scripts": [
        {
          "ctor": "Script",
          "data": {
            "code": "/** @param {NS} ns */\\\\nexport async function main(ns) {\\\\n  return ns.asleep(1000000);\\\\n}",
            "filename": "script.js",
            "server": "home"
          }
        }
      ],
      "serversOnNetwork": [
        "n00dles"
      ],
      "smtpPortOpen": false,
      "sqlPortOpen": false,
      "sshPortOpen": false,
      "textFiles": [],
      "purchasedByPlayer": true,
      "backdoorInstalled": false,
      "baseDifficulty": 1,
      "hackDifficulty": 1,
      "minDifficulty": 1,
      "moneyAvailable": 0,
      "moneyMax": 0,
      "numOpenPortsRequired": 5,
      "openPortCount": 0,
      "requiredHackingSkill": 1,
      "serverGrowth": 1
    }
  },
  "n00dles": {
    "ctor": "Server",
    "data": {
      "contracts": [],
      "cpuCores": 1,
      "ftpPortOpen": false,
      "hasAdminRights": false,
      "hostname": "n00dles",
      "httpPortOpen": false,
      "ip": "61.6.6.2",
      "isConnectedTo": false,
      "maxRam": 4,
      "messages": [],
      "organizationName": "Noodle Bar",
      "programs": [],
      "ramUsed": 0,
      "runningScripts": [],
      "scripts": [],
      "serversOnNetwork": [
        "home"
      ],
      "smtpPortOpen": false,
      "sqlPortOpen": false,
      "sshPortOpen": false,
      "textFiles": [],
      "purchasedByPlayer": false,
      "backdoorInstalled": false,
      "baseDifficulty": 1,
      "hackDifficulty": 1,
      "minDifficulty": 1,
      "moneyAvailable": 70000,
      "moneyMax": 1750000,
      "numOpenPortsRequired": 0,
      "openPortCount": 0,
      "requiredHackingSkill": 1,
      "serverGrowth": 3000
    }
  }
}"
`;
